[package]
name = "cranelift-aot-helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-frontend = "0.114.0"
cranelift-codegen = "0.114.0"
cranelift-object = "0.114.0"
cranelift-module = "0.114.0"
target-lexicon = "0.12.16"
anyhow = "1.0.93"
